# argos

./: .gitattributes  .gitignore  ARGOS-RULES.md  ARGOS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.argos/: local.toml.template
.claude/agents/: orchestrator.md  watchdog.md
.claude/commands/: orchestrate.md
.cursor/commands/: new-ticket.md  steer.md
.cursor/rules/: planner.mdc
.gemini/skills/: ask.md  coder.md  next.md
.github/ISSUE_TEMPLATE/: ticket.yml
.github/workflows/: spec-lint.yml
.specs/: ARCHITECTURE.md.template  STATE.md.template
.specs/decisions/: ADR-000-example.md.template
.specs/tickets/: EXAMPLE-001.md.template
argos/: config.toml  conventions.md
argos/cli/: __init__.py  __main__.py  _config_schema.py  argos  config.py  dispatch_log.py  escalation-validate  escalation.py  escalation_validator.py  frontmatter_parser.py  integrity.py  lint_imports.py  queue.py  reconcile.py  spec_paths.py  state_append.py  state_parser.py  verifier_parser.py  verifier_writeback.py  worktree.py
argos/scripts/: argos-init.sh  install-hooks.sh  install-merge-driver.sh  (+1 more)
docs/: graph.html  index.html
scripts/: argos-chaos-probe.sh  argos-init.sh  argos-status.sh  argos-sync.sh  build-docs.sh  build.sh
tools/argos-graph/: .gitignore  README.md  pyproject.toml
tools/argos-graph/argos_graph/: __init__.py  build.py  cli.py  parse.py  query.py  viz_template.html
tools/argos-graph/ontology/: argos.ttl
tools/argos-graph/queries/: agent-pass-rate.sparql  blocked-tickets.sparql  dependency-dag.sparql  drain-chain.sparql  effective-status.sparql  epic-rollup.sparql
tools/argos-graph/tests/: test_parse.py
tools/argos-graph/tests/fixtures/specs/escalations/: SYN-057-2026-01-04T00-00-00Z.md
tools/argos-graph/tests/fixtures/specs/v1.0/: STATE.md
tools/argos-graph/tests/fixtures/specs/v1.0/decisions/: ADR-009-widget-runtime.md
tools/argos-graph/tests/fixtures/specs/v1.0/tickets/: SYN-010-widget-core.md  SYN-020-widget-shell.md
(+146 files in other folders)
