[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "argos"
version = "0.1.0"
description = "Spec-driven guardrail layer over Claude Code subagents."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Ian Frushon", email = "kingl0w@users.noreply.github.com" },
]
keywords = ["claude-code", "agents", "spec-driven", "orchestrator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
# Stdlib-only at runtime. Per ADR-001, adding a runtime dependency
# requires a new ADR.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
argos = "argos.cli.__main__:main_entry"

[project.urls]
Homepage = "https://github.com/kingl0w/argos"

[tool.setuptools.packages.find]
where = ["."]
include = ["argos*"]
exclude = ["argos.specs*", "argos.scripts*"]
