[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "argos-graph"
version = "0.1.0"
description = "Optional, read-only RDF knowledge-graph projection of an argos spec repo."
requires-python = ">=3.10"
# NOT part of the argos stdlib-only core (ADR-001). This tool has its own manifest
# and its own dependency. It never imports the `argos` package.
dependencies = [
    "rdflib>=7",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
argos-graph = "argos_graph.cli:main"

[tool.setuptools]
packages = ["argos_graph"]
